# bazel-monorepo-test

./: .bazelignore  .bazelrc  .gitignore  .npmrc  BUILD.bazel  README.md  WORKSPACE.bazel  deps.bzl  go.mod  package.json  pnpm-lock.yaml  require_cdk.js  tsconfig.json  workspace_status.sh
.github/workflows/: action.yml  pr.yml  release.yml
projects/_dist/: BUILD.bazel
projects/cdk-core/: BUILD.bazel  package.json
projects/cdk-core/lib/: index.ts
projects/example-stack/: BUILD.bazel
projects/go-core/log/: BUILD.bazel  log.go
projects/hello-world-service/cdk/: BUILD.bazel  package.json
projects/hello-world-service/cdk/lib/: index.ts
projects/hello-world-service/service/handler/: BUILD.bazel  main.go  main_test.go
projects/hello-world/_dist/: BUILD.bazel
projects/hello-world/_dist/lib/: index.ts
projects/hello-world/handler/: BUILD.bazel
rules/cdk/: rules.bzl
