load("@bazel_gazelle//:def.bzl", "gazelle")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@aspect_rules_js//js:defs.bzl", "js_binary")
load("@aspect_rules_ts//ts:defs.bzl", "ts_config")
load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")

# gazelle:prefix github.com/lonnblad/bazel-poc
gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)

# link all dependencies from root package.json
npm_link_all_packages(name = "node_modules")

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    visibility = ["//visibility:public"],
    deps = ["//:node_modules/@tsconfig/node18-strictest"],
)

buildifier(
    name = "buildifier",
)

js_binary(
    name = "deploy-example-stack",
    args = [
        "deploy",
        "--app",
        "$(location //projects/example-stack:synth)",
    ],
    data = [
        "//:node_modules/aws-cdk",
        "//projects/example-stack:synth",
    ],
    entry_point = "require_cdk.js",
)
