load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@aspect_rules_js//npm:defs.bzl", "npm_package")

ts_project(
    name = "cdk-core-ts",
    composite = True,
    data = [
        "lib/index.ts",
    ],
    declaration_map = True,
    tsconfig = "//:tsconfig",
    deps = [
        "//:node_modules/@types/node",
        "//:node_modules/aws-cdk-lib",
        "//:node_modules/constructs",
        "//:node_modules/typescript",
    ],
)

npm_package(
    name = "cdk-core",
    srcs = [
        "package.json",
        ":cdk-core-ts",
    ],
    include_runfiles = True,
    include_srcs_packages = [
        "**",
    ],
    visibility = ["//visibility:public"],
)
