load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@aspect_rules_js//npm:defs.bzl", "npm_package", "stamped_package_json")

stamped_package_json(
    name = "package",
    # This key is defined by /workspace_status.sh
    stamp_var = "STABLE_BUILD_VERSION",
)

ts_project(
    name = "cdk-core-ts",
    srcs = [
        "lib/index.ts",
        ":package",
    ],
    composite = True,
    declaration_map = True,
    tsconfig = "//:tsconfig",
    deps = [
        "//:node_modules/@types/node",
        "//:node_modules/aws-cdk-lib",
        "//:node_modules/constructs",
        "//:node_modules/typescript",
    ],
)

npm_package(
    name = "cdk-core",
    srcs = [
        ":cdk-core-ts",
    ],
    include_runfiles = True,
    visibility = ["//visibility:public"],
)
