load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@aspect_rules_js//npm:defs.bzl", "npm_package")
load("@bazel_skylib//rules:copy_file.bzl", "copy_file")

copy_file(
    name = "cp_lambda_zip",
    src = "//projects/hello-world-service/service/handler:lambda_zip",
    out = "assets/lambda_deploy.zip",
)

ts_project(
    name = "hello-world-service",
    data = [
        "lib/index.ts",
        ":cp_lambda_zip",
    ],
    tsconfig = "//:tsconfig",
    deps = [
        "//:node_modules/@types/node",
        "//:node_modules/aws-cdk-lib",
        "//:node_modules/constructs",
        "//:node_modules/typescript",
    ],
)

npm_package(
    name = "cdk",
    srcs = [
        "package.json",
        ":hello-world-service",
    ],
    include_runfiles = True,
    include_srcs_packages = [
        "**",
    ],
    visibility = ["//visibility:public"],
)
