load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "handler_lib",
    srcs = ["main.go"],
    importpath = "github.com/lonnblad/bazel-monorepo-test/projects/hello-world/handler",
    visibility = ["//visibility:private"],
    deps = ["@com_github_aws_aws_lambda_go//lambda"],
)

go_binary(
    name = "handler",
    embed = [":handler_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "handler_test",
    srcs = ["main_test.go"],
    embed = [":handler_lib"],
    deps = ["@com_github_stretchr_testify//assert"],
)
